# Pyjulia

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish-to-test-pypi.yml  trigger_workflow.py
.github/workflows/actions/send-notification/: action.yml  index.py  index1.py
src/: benchmarking.py  example.jl  example.py  julia_file.py  pylia.py  setup.py  sudo
src/pyjulia/: __init__.py
src/pyjulia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pylia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: example.jl  pyjulia_test.py  pyproject.toml
