[project]
name = "pyjulia"
version = "0.0.1"
authors = [
  { name="Stefan Arsic", email="stiefelwoods@gmail.com"},
]
description = "A package that allows to use Julia within Python."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/woodyxp/Pylia"
"Bug Tracker" = "https://github.com/woodyxp/Pylia/issues"