[project]
name = "pylia"
version = "0.0.1"
authors = [
  { name="Stefan Arsic", email="stiefelwoods@gmail.com"},
]
description = "This package is made for people to be able to use julia with python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3, Julia :: 1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/woodyxp/Pylia"
"Bug Tracker" = "https://github.com/woodyxp/Pylia/issues"